--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@keenmate/vue-adminlte": "^0.19.7",
+    "cli": "^1.0.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.4.3"
   },
